force-app/main/default/objects/Expense__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Expense_Type__c</field>
            <operation>equals</operation>
            <value>Food, Leisure, Fuel</value>
        </filterItems>
        <filterItems>
            <field>$Source.Amount__c</field>
            <operation>greaterThan</operation>
            <value>5000</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>