force-app/main/default/objects/Expense__c/fields/Account_Holder_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Holder_Name__c</fullName>
    <description>Please enter the req fields</description>
    <label>Account Holder Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>