force-app/main/default/objects/Expense__c/fields/Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account__c</fullName>
    <description>Enter the field for further process.</description>
    <label>Bank Account</label>
    <length>20</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>