force-app/main/default/objects/Expense__c/fields/Expense_Date_time__c.field-meta.xml
<CustomField>
    <fullName>Expense_Date_time__c</fullName>
    <defaultValue>now()</defaultValue>
    <label>Expense Date/time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>