force-app/main/default/objects/Expense__c/fields/is_Billed_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>is_Billed_to_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Billed to Customer?</label>
    <type>Checkbox</type>
</CustomField>