force-app/main/default/objects/Expense__c/fields/Name_of_Sales_Representative__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Sales_Representative__c</fullName>
    <label>Name of Sales Representative</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>