force-app/main/default/objects/Expense__c/fields/no_of_Department__c.field-meta.xml
<CustomField>
    <fullName>no_of_Department__c</fullName>
    <label>no. of Departments</label>
    <summaryForeignKey>Department__c.Expenses__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>