force-app/main/default/objects/Expense__c/fields/Pan_Card__c.field-meta.xml
<CustomField>
    <fullName>Pan_Card__c</fullName>
    <description>Enter the  field if required.</description>
    <label>Pan Card</label>
    <length>10</length>
    <maskChar>X</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>