force-app/main/default/objects/Expense__c/fields/Secondary_Approver__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Approver</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.is_Billed_to_Customer__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Secondary_Approver__c</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>