force-app/main/default/objects/Expense__c/validationRules/Exp_Date_should_not_be_Earlier_than_30da.validationRule-meta.xml
<ValidationRule>
    <fullName>Exp_Date_should_not_be_Earlier_than_30da</fullName>
    <active>true</active>
    <errorConditionFormula>(TODAY() -DATEVALUE( Expense_Date_time__c ))&gt;30</errorConditionFormula>
    <errorDisplayField>Expense_Date_time__c</errorDisplayField>
    <errorMessage>You Cannot claim for an expense which is more than 30 days</errorMessage>
</ValidationRule>