force-app/main/default/objects/Expense__c/validationRules/Exp_should_not_be_future_time.validationRule-meta.xml
<ValidationRule>
    <fullName>Exp_should_not_be_future_time</fullName>
    <active>true</active>
    <errorConditionFormula>TODAY()-DATEVALUE( Expense_Date_time__c )&lt;1</errorConditionFormula>
    <errorDisplayField>Expense_Date_time__c</errorDisplayField>
    <errorMessage>Date must not be more then 1 day for claim.</errorMessage>
</ValidationRule>